chore: clean useless log info

--- a/imkey-core/ikc-webusb/index.html
+++ b/imkey-core/ikc-webusb/index.html
@@ -9,7 +9,7 @@
 <body>
     <button id="connectButton">Connect</button>
     <br><br>
-    <input type="text" id="apduInput" placeholder="Enter APDU command" value="00A4040000" />
+    <input type="text" id="apduInput" placeholder="Enter APDU command" value="00A4040000" style="width: 300px;" />
     <button id="sendButton" >Send APDU</button>
     <div id="output"></div>
 
